@@ -11,6 +11,9 @@ Imager release history.  Older releases can be found in Changes.old
  - add some other imaging modules to SEE ALSO
    https://rt.cpan.org/Ticket/Display.html?id=73906
 
+ - note that the generator of the apparently non-DFSG-free postscript
+   in MMOne.pfb is a Debian package.
+
 Bug fixes:
 
  - correctly calculate the size of a rotated image
